langchain4j integration
Signed-off-by: Eric Deandrea <edeandrea@redhat.com>