@@ -159,7 +159,7 @@ class HeroClientTests {
     assertThat(ex)
       .isNotNull()
       .isExactlyInstanceOf(CircuitBreakerOpenException.class)
-      .hasMessageContainingAll(String.format("%s#findRandomHero", HeroClient.class.getName()), "circuit breaker is open");
+      .hasMessageContainingAll("%s#findRandomHero".formatted(HeroClient.class.getName()), "circuit breaker is open");
 
     // Verify that the breaker is open
     assertThat(this.circuitBreakerMaintenance.currentState("findRandomHero"))
